# ease-template

./: Cargo.toml  README.md
ee/: Cargo.toml  build.rs
ee/src/: main.rs
interface/: Cargo.toml
interface/src/: blob.rs
src/: main.rs
tests/: ee_tests.rs
wrapper/: Cargo.toml  build.rs
wrapper/src/: lib.rs
