[package]
name = "interface"
version = "0.1.0"
authors = ["Matt Garnett <matt.garnett@me.com>"]
edition = "2018"

[dependencies]
arborist = { version = "0.0.5", optional = true }
arrayref = "0.3.5"
bonsai = { git = "https://github.com/lightclient/bonsai.git", branch="master", default-features = false, features = ["u128"] }
oof = "0.1.1"

[target.'cfg(feature = "generate")'.dependencies]
proof = { git = "https://github.com/lightclient/proof.git", branch="master", features = ["generate"]}

[target.'cfg(not(feature = "generate"))'.dependencies]
proof = { git = "https://github.com/lightclient/proof.git", branch="master"}

[features]
default = []
generate = ["arborist"]
